--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,3 @@
-  
 <section class="new-post-section">
     <button type="submit" class="btn" id="create-new-post">+ Create new post</button>
 </section>
@@ -18,4 +17,4 @@
 </section>
 {{/if}}
 
-<script src="/javascript/create-post.js"></script>
+<script src="/js/createPost.js"></script>
