--- a/views/partials/postInfo.handlebars
+++ b/views/partials/postInfo.handlebars
@@ -1,4 +1,4 @@
-<section class="post">
+<article class="post">
     <div class="whole-post">
         <div class="post-name">
             <a href="/post/{{id}}" class="links">{{title}}</a>
@@ -12,4 +12,4 @@
             <p>{{content}}</p>
         </div>
     </div>
-</section>
+</article>
