--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -26,6 +26,6 @@
 </article>
 
 {{#if loggedIn}}
-<script src="/javascript/editPost.js"></script>
-<script src="/javascript/deletePost.js"></script>
+<script src="/js/editPost.js"></script>
+<script src="/js/deletePost.js"></script>
 {{/if}}
