--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,4 +21,4 @@
     <a href="/signup" class="sign-in-link">sign up instead</a>
 </section>
 
-<script src="/javascript/login.js"></script>
+<script src="/js/login.js"></script>
